# potius

./: Main.java  README.md  holaMundo.m  in.txt  potius.cabal
.stack-work/install/x86_64-linux/lts-6.12/7.10.3/flag-cache/: Cabal-1.22.8.0-7538a8e6fff081dd4308c295dcb029b4  HTTP-4000.3.3-be49b61b2dcc12068a620e8f7b5972ef  aeson-0.11.2.1-4b9414e88af007ec0f3c0111bed561b9  aeson-compat-0.3.5.1-813d0d1ef60bf5819c657f920c7cb689  aeson-pretty-0.7.2-e5274bb431130fa0efff6ddfee748b4b  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  appar-0.1.4-49c6ef6e14982c7422c400172aa14b53  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.2-5c8217f74f208c82613532fc63bbbfeb  auto-update-0.1.4-26185380f9814bfda0946e559c9342a7  base-compat-0.9.1-88d2eb460760f8335257e69c0f87aa82  base64-bytestring-1.0.0.1-7a1d6278262346143ad180321424ea8b  blaze-builder-0.4.0.2-efcd427769ccee59ed2ad8bb5ef5db7a  blaze-html-0.8.1.2-e3ffe32b0afc5e1647540b55b2831d63  blaze-markup-0.7.1.0-ca0833cd45bb3af15167e9c0912c1d86  byteorder-1.0.4-668610de9ca60d9ba78b7a66682229b4  bytestring-builder-0.10.6.0.0-8aa4073730c676dbe210ea8bffd8d092  cabal-install-1.22.9.0  case-insensitive-1.2.0.7-9ec9adfcb66c358106e37267b153bcbf  cmdargs-0.10.14-faa0a33022db697842edf726eec09651  conduit-1.2.7-b0f3f8153b426577852b2dfac5d8e9e7  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  (+75 more)
docs/: pitch.aux  pitch.nav  pitch.out  pitch.tex  pitch.toc
docs/Teoria/: Ejemplo de 3 x 7    en Excel y MakeitRational.xlsx  Ejemplo pja 3 x 7 superdecisions makeitraitonal y excel.xlsx  Japan_Talk.doc
ejemplo_matlab/: eje.m
src/: Main.hs
