name:                potius
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/potius#readme
license:             BSD3
license-file:        LICENSE
author:              hefesto
maintainer:          daniel.herrera.rendon@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable potius
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.8.1.0 && < 5,
                       persistent-template,
                       persistent-postgresql,
                       persistent,
                       monad-logger,
                       transformers,
                       time,
                       resourcet,
                       scotty,
                       aeson,
                       text,
                       safe,
                       email-validate,
                       esqueleto,
                       hmatrix

